--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -115,4 +115,4 @@ The above example sets the `SERPAPI_API_KEY` of the `search-engine` plugin to `x
 
 - Type: Optional
 - Description: Index address of the LobeChat assistant market. If you have deployed the assistant market service on your own, you can use this variable to override the default market address.
-- Default: `https://chat-agents.theforage.cn`
+- Default: `https://chat-agents.lobehub.com`
