--- a/locales/fr-FR/welcome.json
+++ b/locales/fr-FR/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Je suis votre assistant intelligent personnel AiPMChat. Que puis-je faire pour vous maintenant ?\nSi vous avez besoin d'une assistance plus professionnelle ou personnalisée, vous pouvez cliquer sur `+` pour créer un assistant personnalisé.",
     "qa": {
-      "q01": "Qu'est-ce que LobeHub ?",
+      "q01": "Qu'est-ce que AiPMHub?",
       "q02": "Qu'est-ce que AiPMChat ?",
       "q03": "AiPMChat a-t-il un support communautaire ?",
       "q04": "Quelles sont les fonctionnalités prises en charge par AiPMChat ?",
