--- a/locales/zh-TW/welcome.json
+++ b/locales/zh-TW/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "我是您的私人智能助理 AiPMChat ，請問現在能幫您做什麼？\n如果需要獲得更加專業或定制的助手，可以點擊 `+` 創建自定義助手",
     "qa": {
-      "q01": "LobeHub 是什麼？",
+      "q01": "AiPMHub是什麼？",
       "q02": "AiPMChat 是什麼？",
       "q03": "AiPMChat 是否有社區支持？",
       "q04": "AiPMChat 支持哪些功能？",
