--- a/locales/it-IT/welcome.json
+++ b/locales/it-IT/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Sono il tuo assistente intelligente personale AiPMChat, in che modo posso aiutarti ora?\nSe hai bisogno di un'assistenza più professionale o personalizzata, clicca su `+` per creare un assistente personalizzato",
     "qa": {
-      "q01": "Cos'è LobeHub?",
+      "q01": "Cos'è AiPMHub?",
       "q02": "Cos'è AiPMChat?",
       "q03": "AiPMChat ha supporto comunitario?",
       "q04": "Quali funzionalità supporta AiPMChat?",
