--- a/locales/pl-PL/welcome.json
+++ b/locales/pl-PL/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Jestem Twoim prywatnym asystentem AiPMChat. W czym mogę pomóc?\nJeśli potrzebujesz bardziej profesjonalnej lub spersonalizowanej pomocy, kliknij `+` aby stworzyć niestandardowego asystenta",
     "qa": {
-      "q01": "Czym jest LobeHub?",
+      "q01": "Czym jest AiPMHub?",
       "q02": "Czym jest AiPMChat?",
       "q03": "Czy AiPMChat ma wsparcie społecznościowe?",
       "q04": "Jakie funkcje obsługuje AiPMChat?",
