--- a/locales/pt-BR/welcome.json
+++ b/locales/pt-BR/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Eu sou o seu assistente de IA pessoal, AiPMChat. Como posso ajudar você agora?\nSe precisar de assistência mais profissional ou personalizada, clique em `+` para criar um assistente personalizado",
     "qa": {
-      "q01": "O que é o LobeHub?",
+      "q01": "O que é o AiPMHub?",
       "q02": "O que é o AiPMChat?",
       "q03": "O AiPMChat tem suporte comunitário?",
       "q04": "Quais funcionalidades o AiPMChat suporta?",
