--- a/locales/zh-CN/chat.json
+++ b/locales/zh-CN/chat.json
@@ -22,8 +22,8 @@
   "emptyAgent": "暂无助手",
   "historyRange": "历史范围",
   "inbox": {
-    "desc": "开启大脑集群，激发思维火花。你的智能助理，在这里与你交流一切",
-    "title": "随便聊聊"
+    "desc": "思维碰撞，共启新知。专业领域，尽情探讨。",
+    "title": "自由交流"
   },
   "input": {
     "addAi": "添加一条 AI 消息",
