--- a/locales/bg-BG/welcome.json
+++ b/locales/bg-BG/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Аз съм вашият личен интелигентен асистент AiPMChat. Как мога да ви помогна сега?\nАко искате по-професионален или персонализиран асистент, може да кликнете върху `+`, за да създадете персонализиран асистент.",
     "qa": {
-      "q01": "Какво е LobeHub?",
+      "q01": "Какво е AiPMHub?",
       "q02": "Какво е AiPMChat?",
       "q03": "Има ли AiPMChat общностна подкрепа?",
       "q04": "Какви функции поддържа AiPMChat?",
