--- a/locales/de-DE/welcome.json
+++ b/locales/de-DE/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Ich bin Ihr persönlicher intelligenter Assistent AiPMChat. Wie kann ich Ihnen jetzt helfen?\nWenn Sie einen professionelleren oder maßgeschneiderten Assistenten benötigen, klicken Sie auf `+`, um einen benutzerdefinierten Assistenten zu erstellen.",
     "qa": {
-      "q01": "Was ist LobeHub?",
+      "q01": "Was ist AiPMHub?",
       "q02": "Was ist AiPMChat?",
       "q03": "Hat AiPMChat Community-Support?",
       "q04": "Welche Funktionen unterstützt AiPMChat?",
