--- a/locales/nl-NL/welcome.json
+++ b/locales/nl-NL/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Ik ben uw persoonlijke slimme assistent AiPMChat, waarmee kan ik u helpen?\nAls u een meer professionele of op maat gemaakte assistent nodig heeft, kunt u op `+` klikken om een aangepaste assistent te maken",
     "qa": {
-      "q01": "Wat is LobeHub?",
+      "q01": "Wat is AiPMHub?",
       "q02": "Wat is AiPMChat?",
       "q03": "Heeft AiPMChat community-ondersteuning?",
       "q04": "Welke functies ondersteunt AiPMChat?",
