--- a/locales/ru-RU/welcome.json
+++ b/locales/ru-RU/welcome.json
@@ -11,7 +11,7 @@
     },
     "defaultMessage": "Я ваш персональный интеллектуальный помощник AiPMChat. Чем я могу помочь вам сейчас?\nЕсли вам нужна более профессиональная или настраиваемая помощь, нажмите `+`, чтобы создать пользовательского помощника.",
     "qa": {
-      "q01": "Что такое LobeHub?",
+      "q01": "Что такое AiPMHub?",
       "q02": "Что такое AiPMChat?",
       "q03": "Поддерживает ли AiPMChat сообщества?",
       "q04": "Какие функции поддерживает AiPMChat?",
