--- a/locales/zh-TW/welcome.json
+++ b/locales/zh-TW/welcome.json
@@ -1,35 +1,35 @@
 {
   "button": {
-    "import": "匯入設定檔",
-    "market": "逛逛市場",
-    "start": "馬上開始"
+    "import": "導入配置",
+    "market": "探索市場",
+    "start": "立即開始"
   },
   "guide": {
     "agents": {
-      "replaceBtn": "換一批",
-      "title": "新增助理推薦："
+      "replaceBtn": "替換批次",
+      "title": "推薦助手："
     },
-    "defaultMessage": "我是您的私人智能助理 AiPMChat ，請問現在能幫您做什麼？\n如果需要獲得更加專業或定制的助手，可以點擊 `+` 創建自定義助手",
+    "defaultMessage": "我是您的個人 AI 助手，AiPMChat。今天我能為您做些什麼？\n如果您需要更專業或定制化的體驗，請點擊 `+` 創建您的專屬助手。",
     "qa": {
-      "q01": "AiPMHub是什麼？",
-      "q02": "AiPMChat 是什麼？",
-      "q03": "AiPMChat 是否有社區支持？",
-      "q04": "AiPMChat 支持哪些功能？",
-      "q05": "AiPMChat 如何部署和使用？",
-      "q06": "AiPMChat 的定價是如何的？",
-      "q07": "AiPMChat 是否免費?",
-      "q08": "是否有雲端服務版？",
-      "q09": "是否支持本地語言模型?",
-      "q10": "是否支持圖像識別和生成?",
-      "q11": "是否支持語音合成和語音識別？",
-      "q12": "是否支持插件系統？",
-      "q13": "是否有自己的市場來獲取 GPTs？",
-      "q14": "是否支持多種 AI 服務提供商？",
-      "q15": "我在使用時遇到問題應該怎麼辦？"
+      "q01": "什麼是 AiPMHub？",
+      "q02": "什麼是 AiPMChat？",
+      "q03": "AiPMChat 提供社群支持嗎？",
+      "q04": "AiPMChat 提供哪些功能？",
+      "q05": "如何部署和使用 AiPMChat？",
+      "q06": "AiPMChat 的定價方案是什麼？",
+      "q07": "AiPMChat 免費使用嗎？",
+      "q08": "有雲服務版本嗎？",
+      "q09": "AiPMChat 支持本地語言模型嗎？",
+      "q10": "AiPMChat 支持圖像識別和生成嗎？",
+      "q11": "AiPMChat 支持語音合成和識別嗎？",
+      "q12": "AiPMChat 有插件系統嗎？",
+      "q13": "有可以獲取 GPT 的市場嗎？",
+      "q14": "AiPMChat 支持多個 AI 服務提供商嗎？",
+      "q15": "如果我在使用 AiPMChat 時遇到問題，該怎麼辦？"
     },
     "questions": {
       "moreBtn": "了解更多",
-      "title": "大家都在問："
+      "title": "常見問題："
     },
     "welcome": {
       "afternoon": "下午好",
@@ -39,11 +39,11 @@
     }
   },
   "header": "歡迎",
-  "pickAgent": "或從以下助理範本中選擇",
-  "skip": "跳過建立步驟",
+  "pickAgent": "或者從以下預構建的助手模板中選擇",
+  "skip": "跳過助手創建",
   "slogan": {
-    "desc1": "釋放你腦力的潛能，點燃你的創意火花。你的智慧型助理，隨時待命。",
-    "desc2": "建立你的第一個助理，讓我們一起開始吧～",
-    "title": "為自己賦予一個更聰明的大腦"
+    "desc1": "開創思維和創造的新紀元。專為超級個體打造。",
+    "desc2": "創建您的第一個助手，讓我們開始吧！",
+    "title": "釋放腦力的力量"
   }
 }
