--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -86,7 +86,7 @@ For specific content, please refer to the [Feature Flags](/docs/self-hosting/adv
 
 - Type: Optional
 - Description: Index address of the AiPMChat plugin market. If you have deployed the plugin market service on your own, you can use this variable to override the default plugin market address.
-- Default: `https://chat-plugins.lobehub.com`
+- Default: `https://chat-plugins.theforage.cn`
 
 ### `PLUGIN_SETTINGS`
 
