--- a/docs/usage/features/plugin-system.mdx
+++ b/docs/usage/features/plugin-system.mdx
@@ -57,8 +57,8 @@ Learn more about [plugin usage](/en-US/usage/plugins/basic) by checking it out.
 
 - [lobe-chat-plugins][lobe-chat-plugins]: This is the plugin index for AiPMChat. It retrieves the list of plugins from the index.json of this repository and displays them to the users.
 - [chat-plugin-template][chat-plugin-template]: Chat Plugin plugin development template, you can quickly create a new plugin project through the project template.
-- [@lobehub/chat-plugin-sdk][chat-plugin-sdk]: The AiPMChat plugin SDK can help you create excellent AiPM Chat plugins.
-- [@lobehub/chat-plugins-gateway][chat-plugins-gateway]: The AiPMChat plugin gateway is a backend service that serves as the gateway for AiPMChat plugins. We deploy this service using Vercel.
+- [@aipmorg/chat-plugin-sdk][chat-plugin-sdk]: The AiPMChat plugin SDK can help you create excellent AiPM Chat plugins.
+- [@aipmorg/chat-plugins-gateway][chat-plugins-gateway]: The AiPMChat plugin gateway is a backend service that serves as the gateway for AiPMChat plugins. We deploy this service using Vercel.
 
 ### Roadmap Progress
 
@@ -83,7 +83,7 @@ Comprehensive authentication, visual configuration of plugin definitions, Plugin
 
 </Steps>
 
-[chat-plugin-sdk]: https://github.com/lobehub/chat-plugin-sdk
+[chat-plugin-sdk]: https://github.com/aipmhub/chat-plugin-sdk
 [chat-plugin-template]: https://github.com/lobehub/chat-plugin-template
-[chat-plugins-gateway]: https://github.com/lobehub/chat-plugins-gateway
+[chat-plugins-gateway]: https://github.com/aipmhub/chat-plugins-gateway
 [lobe-chat-plugins]: https://github.com/aipmhub/aipm-chat-plugins
