--- a/docs/usage/plugins/development.mdx
+++ b/docs/usage/plugins/development.mdx
@@ -201,7 +201,7 @@ The server-side needs to implement the API interfaces described in the manifest.
 
 #### API Implementation
 
-For the Edge Runtime, we provide the `createErrorResponse` method in `@lobehub/chat-plugin-sdk` to quickly return error responses. Currently, the provided error types are detailed in: [PluginErrorType][plugin-error-type-url].
+For the Edge Runtime, we provide the `createErrorResponse` method in `@aipmorg/chat-plugin-sdk` to quickly return error responses. Currently, the provided error types are detailed in: [PluginErrorType][plugin-error-type-url].
 
 The implementation of the clothes interface in the template is as follows:
 
@@ -232,7 +232,7 @@ Since the default plugin gateway for AiPMChat is a cloud service `/api/plugins`,
 For custom plugins, plugin requests need to be sent to the local service. Therefore, by specifying the gateway in the manifest ([http://localhost:3400/api/gateway](http://localhost:3400/api/gateway)), AiPMChat> will directly request this address, and then only the corresponding gateway needs to be created at that address.
 
 ```ts
-import { createLobeChatPluginGateway } from '@lobehub/chat-plugins-gateway';
+import { createLobeChatPluginGateway } from '@aipmorg/chat-plugins-gateway';
 
 export const config = {
   runtime: 'edge',
@@ -241,7 +241,7 @@ export const config = {
 export default createLobeChatPluginGateway();
 ```
 
-[`@lobehub/chat-plugins-gateway`](https://github.com/lobehub/chat-plugins-gateway) contains the implementation of the plugin gateway in AiPMChat [here](https://github.com/aipmhub/aipm-chat/blob/main/src/pages/api/plugins.api.ts). You can use this package directly to create a gateway, allowing AiPMChat to access the local plugin service.
+[`@aipmorg/chat-plugins-gateway`](https://github.com/aipmhub/chat-plugins-gateway) contains the implementation of the plugin gateway in AiPMChat [here](https://github.com/aipmhub/aipm-chat/blob/main/src/pages/api/plugins.api.ts). You can use this package directly to create a gateway, allowing AiPMChat to access the local plugin service.
 
 ### Plugin UI Interface
 
@@ -273,10 +273,10 @@ AiPMChat implements the loading of plugin UI through `iframe` and uses `postMess
 
 In the template we provide, we use React + Next.js + [antd](https://ant.design/) as the frontend interface framework. You can find the implementation of the user interface in [`src/pages/index.tsx`](https://github.com/lobehub/chat-plugin-template/blob/main/src/pages/index.tsx).
 
-As for plugin communication, we provide relevant methods in [`@lobehub/chat-plugin-sdk`](https://github.com/lobehub/chat-plugin-sdk) to simplify communication between the plugin and AiPMChat. You can actively retrieve the current message data from AiPMChat using the `fetchPluginMessage` method. For detailed information about this method, see: [fetchPluginMessage][fetch-plugin-message-url].
+As for plugin communication, we provide relevant methods in [`@aipmorg/chat-plugin-sdk`](https://github.com/aipmhub/chat-plugin-sdk) to simplify communication between the plugin and AiPMChat. You can actively retrieve the current message data from AiPMChat using the `fetchPluginMessage` method. For detailed information about this method, see: [fetchPluginMessage][fetch-plugin-message-url].
 
 ```tsx
-import { fetchPluginMessage } from '@lobehub/chat-plugin-sdk';
+import { fetchPluginMessage } from '@aipmorg/chat-plugin-sdk';
 import { memo, useEffect, useState } from 'react';
 
 import { ResponseData } from '@/type';
@@ -317,8 +317,8 @@ If you want more people to use your plugin, feel free to [submit it for listing]
 
 - **📘 Pluging SDK Documentation**: [https://chat-plugin-sdk.lobehub.com](https://chat-plugin-sdk.lobehub.com)
 - **🚀 chat-plugin-template**: [https://github.com/lobehub/chat-plugin-template](https://github.com/lobehub/chat-plugin-template)
-- **🧩 chat-plugin-sdk**: [https://github.com/lobehub/chat-plugin-sdk](https://github.com/lobehub/chat-plugin-sdk)
-- **🚪 chat-plugin-gateway**: [https://github.com/lobehub/chat-plugins-gateway](https://github.com/lobehub/chat-plugins-gateway)
+- **🧩 chat-plugin-sdk**: [https://github.com/aipmhub/chat-plugin-sdk](https://github.com/aipmhub/chat-plugin-sdk)
+- **🚪 chat-plugin-gateway**: [https://github.com/aipmhub/chat-plugins-gateway](https://github.com/aipmhub/chat-plugins-gateway)
 - **🏪 lobe-chat-plugins**: [https://github.com/aipmhub/aipm-chat-plugins](https://github.com/aipmhub/aipm-chat-plugins)
 
 [fetch-plugin-message-url]: https://github.com/lobehub/chat-plugin-template
