--- a/locales/zh-CN/welcome.json
+++ b/locales/zh-CN/welcome.json
@@ -1,35 +1,35 @@
 {
   "button": {
     "import": "导入配置",
-    "market": "探索市场",
+    "market": "逛逛市场",
     "start": "立即开始"
   },
   "guide": {
     "agents": {
-      "replaceBtn": "替换批次",
-      "title": "推荐助手："
+      "replaceBtn": "换一批",
+      "title": "新增助理推荐："
     },
-    "defaultMessage": "我是您的个人 AI 助手，AiPMChat。今天我能为您做些什么？\n如果您需要更专业或定制化的体验，请点击 `+` 创建您的专属助手。",
+    "defaultMessage": "我是您的私人智能助理 AiPMChat ，请问现在能帮您做什么？\n如果需要获得更加专业或定制的助手，可以点击 `+` 创建自定义助手",
     "qa": {
-      "q01": "什么是 AiPMHub？",
-      "q02": "什么是 AiPMChat？",
-      "q03": "AiPMChat 提供社区支持吗？",
-      "q04": "AiPMChat 提供哪些功能？",
-      "q05": "如何部署和使用 AiPMChat？",
-      "q06": "AiPMChat 的定价方案是什么？",
-      "q07": "AiPMChat 免费使用吗？",
-      "q08": "有云服务版本吗？",
-      "q09": "AiPMChat 支持本地语言模型吗？",
-      "q10": "AiPMChat 支持图像识别和生成吗？",
-      "q11": "AiPMChat 支持语音合成和识别吗？",
-      "q12": "AiPMChat 有插件系统吗？",
-      "q13": "有可以获取 GPT 的市场吗？",
-      "q14": "AiPMChat 支持多个 AI 服务提供商吗？",
-      "q15": "如果我在使用 AiPMChat 时遇到问题，该怎么办？"
+      "q01": "AiPMHub是什么？",
+      "q02": "AiPMChat 是什么？",
+      "q03": "AiPMChat 是否有社区支持？",
+      "q04": "AiPMChat 支持哪些功能？",
+      "q05": "AiPMChat 如何部署和使用？",
+      "q06": "AiPMChat 的定价是如何的？",
+      "q07": "AiPMChat 是否免费?",
+      "q08": "是否有云端服务版？",
+      "q09": "是否支持本地语言模型?",
+      "q10": "是否支持图像识别和生成?",
+      "q11": "是否支持语音合成和语音识别？",
+      "q12": "是否支持插件系统？",
+      "q13": "是否有自己的市场来获取 GPTs？",
+      "q14": "是否支持多种 AI 服务提供商？",
+      "q15": "我在使用时遇到问题应该怎么办？"
     },
     "questions": {
       "moreBtn": "了解更多",
-      "title": "常见问题："
+      "title": "大家都在问："
     },
     "welcome": {
       "afternoon": "下午好",
@@ -38,12 +38,12 @@
       "noon": "中午好"
     }
   },
-  "header": "欢迎",
-  "pickAgent": "或者从以下预构建的助手模板中选择",
-  "skip": "跳过助手创建",
+  "header": "欢迎使用",
+  "pickAgent": "或从下列助手模板选择",
+  "skip": "跳过创建",
   "slogan": {
-    "desc1": "开创思维和创造的新纪元。专为超级个体打造。",
-    "desc2": "创建您的第一个助手，让我们开始吧！",
-    "title": "释放大脑的力量"
+    "desc1": "开启大脑集群，激发思维火花。你的智能助理，一直都在。",
+    "desc2": "创建你的第一个助手，让我们开始吧~",
+    "title": "给自己一个更聪明的大脑"
   }
 }
