--- a/docs/self-hosting/advanced/settings-url-share.mdx
+++ b/docs/self-hosting/advanced/settings-url-share.mdx
@@ -27,8 +27,8 @@ The currently supported settings are:
 Use the following URL format to import settings parameters from an external URL:
 
 ```plaintext
-https://lobehub.com/?settings=<settings object in JSON format>
-https://lobehub.com/?settings={"keyVaults":{"openai":{"apiKey":"user-key","baseURL":"https://your-proxy.com/v1"}}}
+https://theforage.cn/?settings=<settings object in JSON format>
+https://theforage.cn/?settings={"keyVaults":{"openai":{"apiKey":"user-key","baseURL":"https://your-proxy.com/v1"}}}
 ```
 
 Example of settings in JSON format:
