--- a/docs/self-hosting/advanced/webrtc.mdx
+++ b/docs/self-hosting/advanced/webrtc.mdx
@@ -1,4 +1,4 @@
-# LobeChat WebRTC Sync
+# AiPMChat WebRTC Sync
 
 ## Introduction to WebRTC
 
@@ -22,16 +22,16 @@ After deployment, you will receive a URL, for example: `https://my-signaling-ser
 
 ### Enable WebRTC Sync in the Deployment Instance
 
-The WebRTC sync feature in LobeChat is hidden by default and needs to be enabled by adding the environment variable `FEATURE_FLAGS=+webrtc_sync`.
+The WebRTC sync feature in AiPMChat is hidden by default and needs to be enabled by adding the environment variable `FEATURE_FLAGS=+webrtc_sync`.
 
 ### Configure WebRTC Sync Settings in LobeChat
 
-1. Open LobeChat settings -> Data Sync
+1. Open AiPMChat settings -> Data Sync
 2. Enter the signaling server address in the WebRTC sync section;
 3. Set the sync channel name and password
 
 <Image
-  alt={'LobeChat Data Sync Settings Page'}
+  alt={'AiPMChat Data Sync Settings Page'}
   height={356}
   inStep
   src={'https://github.com/lobehub/lobe-chat/assets/28616219/bf86bf1e-87fb-4015-8587-15ff28bb9c24'}
