--- a/docs/usage/features/tts.mdx
+++ b/docs/usage/features/tts.mdx
@@ -38,7 +38,7 @@ In AiPMChat, we have carefully selected a series of high-quality voice options (
   src={'https://github.com/aipmhub/aipm-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
 />
 
-[`@lobehub/tts`](https://tts.lobehub.com) is a high-quality TTS toolkit developed using the TS language, supporting usage in both server and browser environments.
+[`@lobehub/tts`](https://tts.theforage.cn) is a high-quality TTS toolkit developed using the TS language, supporting usage in both server and browser environments.
 
 - **Server**: With just 15 lines of code, it can achieve high-quality speech generation capabilities comparable to OpenAI TTS services. It currently supports EdgeSpeechTTS, MicrosoftTTS, OpenAITTS, and OpenAISTT.
 - **Browser**: It provides high-quality React Hooks and visual audio components, supporting common functions such as loading, playing, pausing, and dragging the timeline, and offering extensive audio track style adjustment capabilities.
