--- a/docs/usage/plugins/development.mdx
+++ b/docs/usage/plugins/development.mdx
@@ -315,7 +315,7 @@ If you want more people to use your plugin, feel free to [submit it for listing]
 
 ## Links
 
-- **📘 Pluging SDK Documentation**: [https://chat-plugin-sdk.lobehub.com](https://chat-plugin-sdk.lobehub.com)
+- **📘 Pluging SDK Documentation**: [https://chat-plugin-sdk.theforage.cn](https://chat-plugin-sdk.theforage.cn)
 - **🚀 chat-plugin-template**: [https://github.com/lobehub/chat-plugin-template](https://github.com/lobehub/chat-plugin-template)
 - **🧩 chat-plugin-sdk**: [https://github.com/aipmhub/chat-plugin-sdk](https://github.com/aipmhub/chat-plugin-sdk)
 - **🚪 chat-plugin-gateway**: [https://github.com/aipmhub/chat-plugins-gateway](https://github.com/aipmhub/chat-plugins-gateway)
@@ -323,7 +323,7 @@ If you want more people to use your plugin, feel free to [submit it for listing]
 
 [fetch-plugin-message-url]: https://github.com/lobehub/chat-plugin-template
 [lobe-chat-plugin-template-url]: https://github.com/lobehub/chat-plugin-template
-[manifest-docs-url]: https://chat-plugin-sdk.lobehub.com/guides/plugin-manifest
+[manifest-docs-url]: https://chat-plugin-sdk.theforage.cn/guides/plugin-manifest
 [plugin-error-type-url]: https://github.com/lobehub/chat-plugin-template
 [submit-plugin-shield]: https://img.shields.io/badge/🧩/🏪_submit_plugin-%E2%86%92-95f3d9?labelColor=black&style=for-the-badge
 [submit-plugin-url]: https://github.com/aipmhub/aipm-chat-plugins
