--- a/docs/usage/plugins/development.zh-CN.mdx
+++ b/docs/usage/plugins/development.zh-CN.mdx
@@ -309,7 +309,7 @@ export default Render;
 
 ## 链接
 
-- **📘 Pluging SDK 文档**: [https://chat-plugin-sdk.lobehub.com](https://chat-plugin-sdk.lobehub.com)
+- **📘 Pluging SDK 文档**: [https://chat-plugin-sdk.theforage.cn](https://chat-plugin-sdk.theforage.cn)
 - **🚀 chat-plugin-template**: [https://github.com/lobehub/chat-plugin-template](https://github.com/lobehub/chat-plugin-template)
 - **🧩 chat-plugin-sdk**: [https://github.com/aipmhub/chat-plugin-sdk](https://github.com/aipmhub/chat-plugin-sdk)
 - **🚪 chat-plugin-gateway**: [https://github.com/aipmhub/chat-plugins-gateway](https://github.com/aipmhub/chat-plugins-gateway)
@@ -317,7 +317,7 @@ export default Render;
 
 [fetch-plugin-message-url]: https://github.com/lobehub/chat-plugin-template
 [lobe-chat-plugin-template-url]: https://github.com/lobehub/chat-plugin-template
-[manifest-docs-url]: https://chat-plugin-sdk.lobehub.com/guides/plugin-manifest
+[manifest-docs-url]: https://chat-plugin-sdk.theforage.cn/guides/plugin-manifest
 [plugin-error-type-url]: https://github.com/lobehub/chat-plugin-template
 [submit-plugin-shield]: https://img.shields.io/badge/🧩/🏪_submit_plugin-%E2%86%92-95f3d9?labelColor=black&style=for-the-badge
 [submit-plugin-url]: https://github.com/aipmhub/aipm-chat-plugins
