--- a/docs/self-hosting/advanced/server-database.mdx
+++ b/docs/self-hosting/advanced/server-database.mdx
@@ -259,11 +259,11 @@ The corresponding environment variables are:
 
 ```shell
 # Bucket name
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # Bucket request endpoint(note that the path of this link contains the bucket name, you must remove the path, or use the link provided on the "Apply for S3 API Token" page)
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # Public domain for accessing the bucket
-NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-aipmchat.your-domain.com
 ```
 
 <Callout type={'warning'}>
@@ -327,11 +327,11 @@ S3_ACCESS_KEY_ID=9998d6757e276cf9f1edbd325b7083a6
 S3_SECRET_ACCESS_KEY=55af75d8eb6b99f189f6a35f855336ea62cd9c4751a5cf4337c53c1d3f497ac2
 
 # Bucket name
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # Bucket request endpoint
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # Public domain for accessing the bucket
-NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-aipmchat.your-domain.com
 
 # Bucket region, such as us-west-1, generally not required to add, but some service providers may need to configure
 # S3_REGION=us-west-1
@@ -431,11 +431,11 @@ S3_ACCESS_KEY_ID=9998d6757e276cf9f1edbd325b7083a6
 S3_SECRET_ACCESS_KEY=55af75d8eb6b99f189f6a35f855336ea62cd9c4751a5cf4337c53c1d3f497ac2
 
 # Bucket name
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # Bucket request endpoint
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # Public access domain for the bucket
-NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-aipmchat.your-domain.com
 # Bucket region, such as us-west-1, generally not needed to add, but some service providers may require configuration
 # S3_REGION=us-west-1
 ```
