--- a/docs/self-hosting/advanced/server-database.zh-CN.mdx
+++ b/docs/self-hosting/advanced/server-database.zh-CN.mdx
@@ -239,11 +239,11 @@ AiPMChat 在很早以前就支持了多模态 的 AI 会话，其中涉及到图
 
 ```shell
 # 存储桶的名称
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # 存储桶的请求端点(注意此处链接的路径带存储桶名称，必须删除该路径，或使用申请 S3 API token 页面所提供的链接)
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # 存储桶对外的访问域名
-NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-aipmchat.your-domain.com
 ```
 
 <Callout type={'warning'}>`S3_ENDPOINT`必须删除其路径，否则会无法访问所上传文件</Callout>
@@ -299,7 +299,7 @@ S3_ACCESS_KEY_ID=9998d6757e276cf9f1edbd325b7083a6
 S3_SECRET_ACCESS_KEY=55af75d8eb6b99f189f6a35f855336ea62cd9c4751a5cf4337c53c1d3f497ac2
 
 # 存储桶的名称
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # 存储桶的请求端点
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # 存储桶对外的访问域名
@@ -405,11 +405,11 @@ S3_ACCESS_KEY_ID=9998d6757e276cf9f1edbd325b7083a6
 S3_SECRET_ACCESS_KEY=55af75d8eb6b99f189f6a35f855336ea62cd9c4751a5cf4337c53c1d3f497ac2
 
 # 存储桶的名称
-S3_BUCKET=lobechat
+S3_BUCKET=aipmchat
 # 存储桶的请求端点
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # 存储桶对外的访问域名
-NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-aipmchat.your-domain.com
 # 桶的区域，如 us-west-1，一般来说不需要添加，但某些服务商则需要配置
 # S3_REGION=us-west-1
 ```
