--- a/docs/usage/features/tts.zh-CN.mdx
+++ b/docs/usage/features/tts.zh-CN.mdx
@@ -34,7 +34,7 @@ AiPMChat 支持文字转语音（Text-to-Speech，TTS）和语音转文字（Spe
   src={'https://github.com/aipmhub/aipm-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
 />
 
-[`@lobehub/tts`](https://tts.lobehub.com) 是一个使用 TS 语言开发的，高质量 TTS 工具包，支持在服务端和浏览器中使用。
+[`@lobehub/tts`](https://tts.theforage.cn) 是一个使用 TS 语言开发的，高质量 TTS 工具包，支持在服务端和浏览器中使用。
 
 - **服务端**：只要使用 15 行代码，即可实现对标 OpenAI TTS 服务的高质量语音生成能力。目前支持 EdgeSpeechTTS 与 MicrosoftTTS 与 OpenAITTS、OpenAISTT。
 - **浏览器**：提供了高质量的 React Hooks 与可视化音频组件，支持加载、播放、暂停、拖动时间轴等常用功能，且提供了非常丰富的音轨样式调整能力。
