--- a/docs/self-hosting/advanced/webrtc.mdx
+++ b/docs/self-hosting/advanced/webrtc.mdx
@@ -14,7 +14,7 @@ To use the WebRTC synchronization feature in LobeChat, you need to complete the 
 
 Deploy a WebRTC signaling server with one click using the Zeabur platform:
 
-[![Deploy on Zeabur](https://zeabur.com/button.svg)](https://zeabur.com/templates/MY0JZG?referralCode=5loi)
+[![Deploy on Zeabur](https://zeabur.com/button.svg)](https://zeabur.com/templates/741EII?referralCode=aipmhub)
 
 Alternatively, you can view the [source code](https://github.com/lobehub/y-webrtc-signaling) and deploy it on your own.
 
