--- a/docs/self-hosting/platform/zeabur.mdx
+++ b/docs/self-hosting/platform/zeabur.mdx
@@ -34,7 +34,7 @@ You can use the subdomain provided by Zeabur, or choose to bind a custom domain.
 </Steps>
 
 [deploy-button-image]: https://zeabur.com/button.svg
-[deploy-link]: https://zeabur.com/templates/VZGGTI
+[deploy-link]: https://zeabur.com/templates/IVK3B5?referralCode=aipmhub
 
 # Deploy AiPMChat with Zeabur as serverless function
 
