--- a/docs/self-hosting/platform/zeabur.zh-CN.mdx
+++ b/docs/self-hosting/platform/zeabur.zh-CN.mdx
@@ -33,7 +33,7 @@ tags:
 </Steps>
 
 [deploy-button-image]: https://zeabur.com/button.svg
-[deploy-link]: https://zeabur.com/templates/VZGGTI
+[deploy-link]: https://zeabur.com/templates/IVK3B5?referralCode=aipmhub
 
 # 使用 Zeabur 将 AiPMChat 部署为无服务器函数
 
